syntax = "proto3";

package message;

import "google/protobuf/timestamp.proto";

option java_package = "nl.tudelft.cs4160.trustchain_android.message";
option java_outer_classname = "MessageProto";

message Message {
    string peer_id = 1;
    bytes destination_address = 2;
    int32 destination_port = 3;
    bytes public_key = 4;
    int32 type = 5;
    Payload payload = 6;
}

message Payload {
    IntroductionRequest introductionRequest = 1;
    IntroductionResponse introductionResponse = 2;
    Puncture puncture = 3;
    PunctureRequest punctureRequest = 4;
    TrustChainBlock block = 5;
    CrawlRequest crawlRequest = 6;
}

message TrustChainBlock {
    bytes public_key = 1;
    int32 sequence_number = 2;
    bytes link_public_key = 3;
    int32 link_sequence_number = 4;
    bytes previous_hash = 5;
    bytes signature = 6;
    Transaction transaction = 7;
    google.protobuf.Timestamp insert_time = 8;

    message Transaction {
        bytes unformatted = 1;
        Claim claim = 2;
    }

    message Claim {
        bytes name = 1;
        google.protobuf.Timestamp timestamp = 2;
        int32 validity_term = 3;
        bytes proof_format = 4;
    }
}

message CrawlRequest {
    bytes public_key = 1;
    int32 requested_sequence_number = 2;
    int32 limit = 3;
}

message IntroductionRequest {
    int64 connection_type = 1;
    string network_operator = 2;
}

message IntroductionResponse {
    int64 connection_type = 1;
    string network_operator = 2;
    bytes internal_source = 3;
    bytes invitee = 4;
    repeated bytes pex = 5;
}

message Puncture {
    bytes source = 1;
}

message PunctureRequest {
    bytes source = 1;
    bytes puncture_peer = 2;
}